# AMSC_STFT

./: README.md  Singularity.def  Support_M&M.md  job.sh  requirements.txt
.github/workflows/: main.yaml
ft_project/: .gitignore  CMakeLists.txt
ft_project/.github/workflows/: ci.yml
ft_project/benchmarks/: CMakeLists.txt  benchmark_MPI_Main.cpp  benchmark_Main.cpp  benchmark_Suite.hpp
ft_project/examples/: CMakeLists.txt  main.cpp  mpi_main.cpp
ft_project/include/audio/: WavReader.hpp
ft_project/include/fft/: BaseFFT.hpp  IterativeFFT.hpp  ParallelFFT.hpp  RecursiveFFT.hpp
ft_project/include/mpi/: MPIContext.hpp
ft_project/include/output/: ImageExporter.hpp
ft_project/include/stft/: MPI_STFTAnalyzer.hpp  STFTAnalyzer.hpp  SpectrogramData.hpp
ft_project/include/window/: BaseWindow.hpp  BlackmanWindow.hpp  HammingWindow.hpp  HannWindow.hpp  WindowConcept.hpp
ft_project/src/audio/: WavReader.cpp
ft_project/src/fft/: IterativeFFT.cpp  ParallelFFT.cpp  RecursiveFFT.cpp
ft_project/src/mpi/: MPIContext.cpp
ft_project/src/output/: ImageExporter.cpp
ft_project/tests/: CMakeLists.txt  test_BaseFFT.cpp  test_BaseWindow.cpp  test_BlackmanWindow.cpp  test_Concept.cpp  test_DFTReference.cpp  test_HammingWindow.cpp  test_HannWindow.cpp  test_IterativeFFT.cpp  test_MPI_STFTAnalyzer.cpp  test_ParallelFFT.cpp  test_ParallelFFT_OpenMP.cpp  test_RecursiveFFT.cpp  test_STFTAnalyzer.cpp  test_WavReader.cpp  test_WindowConcept.cpp
